--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
-  button{
-    font-size: 0%;
-  }
+
+
+
+button {
+  font-size: unset !important;
+  font-weight: normal !important;
+}
